    * moved "SystemInfo" macro from wikimacro to MoinMoin/macro/
    * moved wikiaction.py stuff to MoinMoin/action/__init__.py
    * moved wikimacro.py stuff to MoinMoin/macro/__init__.py
    * moved wikirpc.py stuff to MoinMoin/xmlrpc/__init__.py
    * moved wikitest.py stuff to action/test.py (only used from there)
    * moved formatter/base.py to formatter/__init__.py (FormatterBase)
    * killed "processors" (finally), formatter method changed to:
      formatter.parser(parsername, lines)
    * moved / splitted request.py into MoinMoin/request/*
      Most stuff will be broken, please help fixing it (usually some imports
      will be missing and the adaptor script will need a change maybe):
      CGI works
      CLI works
      STANDALONE not
      MODPY not
      WSGI not
      FCGI not
      TWISTED not
    * moved util/antispam.py to security/antispam.py,
      moved util/autoadmin.py to security/autoadmin.py,
      moved security.py to security/__init__.py,
      moved wikiacl.py to security/__init__.py.
    * added wikiutil.MimeType class (works internally with sanitized mime
      types because the official ones suck)
    * renamed parsers to module names representing sane mimetypes, e.g.:
      parser.wiki -> parser.text_moin_wiki
    * Added thread_monitor. It can be activated using:
      from MoinMoin.util import thread_monitor; thread_monitor.activate_hook()
    * Introduced scope parameter to CacheEntry() - if you specify 'farm', it
      will cache into a common directory for all wikis in the same farm, if you
      specify 'wiki', it will use a cache directory per wiki and if you specify
      'item', it will use a cache directory per item (== per page).
      Creating a CacheEntry without explicit scope is DEPRECATED.
    * smileys moved from MoinMoin.config to MoinMoin.theme

  New Features:

    * FeatureRequests/WikiEmailIntegration TODO:make some help page when stable